--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ author_info: <a href="http://litaotao.github.io/">LI,Taotao</a>
 myblog:
   gavatar: 69e88d45076f4d5052b3a71732b1afeb
   gpname: litaotao
-  linkedin: cn.linkedin.com/in/taotaoli/
+  linkedin: http://www.linkedin.com/in/taotaoli
   github: https://github.com/litaotao
   coverimgs: []
   postbgimg: http://liyu1981.smugmug.com/Photography/365-days-365-photos/i-wLzDhDC/0/X3/R0018155-X3.jpg
