--- a/_config.yml
+++ b/_config.yml
@@ -8,19 +8,20 @@ permalink: /:title
 title: taotao's zone
 url: http://litaotao.github.io
 feed: /atom.xml
-author_info: <a href="http://litaotao.github.io/">Li,Taotao</a>
+author_info: <a href="http://litaotao.github.io/">taotaoli</a>
 
 myblog:
   gavatar: 69e88d45076f4d5052b3a71732b1afeb
   gpname: litaotao
   linkedin: http://www.linkedin.com/in/taotaoli
   github: https://github.com/litaotao
+  email: taotao.li@datayes.com
   coverimgs: []
-  postbgimg: http://liyu1981.smugmug.com/Photography/365-days-365-photos/i-wLzDhDC/0/X3/R0018155-X3.jpg
+  postbgimg: []
 
 prose:
   rooturl: "_posts"
-  # siteurl: "http://liyu1981.github.io/"
+  siteurl: "http://litaotao.github.io/"
   media: "images"
   metadata:
     _posts/blog:
