--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ paginate: 8
 permalink: /:title
 encoding: UTF-8
 
-title: Taotao's Zone
+title: Taotao | 一个爱思考的工程师
 url: http://litaotao.github.io
 feed: /atom.xml
 author_info: <a href="http://litaotao.github.io/">taotaoli</a>
