--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ myblog:
   coverimgs: []
   postbgimg: []
 
-categories: [web, tools, spark, python, money, erlang, db, books]
+categories: [web, tools, spark, new-spark, python, money, erlang, db, books]
 
 prose:
   rooturl: "_posts"
